# FlatScraper

./: .gitignore  Cargo.toml  README.md  sales.json  subscribers.json
src/: main.rs
