[package]
name = "flat_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.12.0"

teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.17", features = ["rt-multi-thread", "macros"] }
once_cell = "1.10.0"
tokio-cron-scheduler = "0.5.0"